--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 <div class="wrap">
 
   {% if is_pro %}
-    <div class="pro-badge">Pro Actives</div>
+    <div class="pro-badge">Pro Active</div>
   {% endif %}
 
   <!-- Brand -->
