--- a/templates/upgrade_success.html
+++ b/templates/upgrade_success.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>You're Pro — Get The Job</title>
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/style2.css">
 </head>
 
 <body>
