--- a/templates/admin_analytics.html
+++ b/templates/admin_analytics.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Analytics — Get The Job</title>
   <link rel="icon" href="/static/favicon.ico">
-  <link rel="stylesheet" href="/static/style2.css">
+  <link rel="stylesheet" href="/static/admin_hud.css">
+
 </head>
 
 <body>
