--- a/templates/home.html
+++ b/templates/home.html
@@ -85,11 +85,24 @@
         <label>Type of work / trade</label>
         <select name="trade">
           <option value="general">General Trade</option>
+
           <option value="electrician">Electrician</option>
           <option value="plumber">Plumber</option>
           <option value="builder">Builder / Renovation</option>
           <option value="hvac">HVAC</option>
+
+          <option value="carpenter">Carpenter / Joiner</option>
+          <option value="tiler">Tiler</option>
+          <option value="painter">Painter</option>
+          <option value="landscaper">Landscaper</option>
+          <option value="concreter">Concreter</option>
+          <option value="roofer">Roofer</option>
+          <option value="glazier">Glazier</option>
+          <option value="flooring">Flooring</option>
+          <option value="handyman">Handyman</option>
+
           <option value="cleaner">Cleaning</option>
+
         </select>
 
         <label>Client name *</label>
