--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -123,8 +123,11 @@
     </div>
 
     <footer class="site-footer">
-      © Get The Job
-    </footer>
+  © Get The Job ·
+  <a href="/terms">Terms</a> ·
+  <a href="/privacy">Privacy</a> ·
+  <a href="/landing">Home</a>
+</footer>
 
   </div>
 
