--- a/templates/upgrade_success.html
+++ b/templates/upgrade_success.html
@@ -25,8 +25,11 @@
     </a>
 
     <footer class="site-footer">
-      © Get The Job
-    </footer>
+  © Get The Job ·
+  <a href="/terms">Terms</a> ·
+  <a href="/privacy">Privacy</a> ·
+  <a href="/landing">Home</a>
+</footer>
   </div>
 </body>
 </html>
