--- a/templates/home.html
+++ b/templates/home.html
@@ -179,8 +179,12 @@
 
 
   <footer class="site-footer">
-    © Get The Job
-  </footer>
+  © Get The Job ·
+  <a href="/terms">Terms</a> ·
+  <a href="/privacy">Privacy</a> ·
+  <a href="/landing">Home</a>
+</footer>
+
 
 </div>
 
