--- a/templates/preview.html
+++ b/templates/preview.html
@@ -95,7 +95,7 @@
   © Get The Job ·
   <a href="/terms">Terms</a> ·
   <a href="/privacy">Privacy</a> ·
-  <a href="/landing">Home</a>
+  <a href="/">Home</a>
 </footer>
   </div>
 
