--- a/templates/landing.html
+++ b/templates/landing.html
@@ -147,7 +147,7 @@
   © Get The Job ·
   <a href="/terms">Terms</a> ·
   <a href="/privacy">Privacy</a> ·
-  <a href="/landing">Home</a>
+  <a href="/">Home</a>
 </footer>
 
 </body>
