--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -54,6 +54,14 @@
     .nav {
       margin-bottom: 18px;
     }
+    /* Footer */
+  .site-footer{
+    margin-top: 16px;
+    padding: 10px 2px;
+    text-align:center;
+    color: rgba(255,255,255,.50);
+    font-size: 12.5px;
+  }
   </style>
 </head>
 <body>
