--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -50,6 +50,7 @@
         <li>Trade-appropriate wording</li>
         <li>Priority improvements</li>
         <li>Copy and paste into your preferred editor</li>
+        <li>Pro subscriptions are limited to two devices.</li>
       </ul>
 
 
