--- a/templates/admin_analytics.html
+++ b/templates/admin_analytics.html
@@ -100,11 +100,16 @@
           {{ stats.upgrade_page_views | default(0) }}
         </li>
         <li>
-          <strong>Upgrade button clicks:</strong>
+          <strong>Upgrade CTA clicks (nav):</strong>
           {{ stats.upgrade_cta_clicks | default(0) }}
+        </li>
+        <li>
+          <strong>Checkout clicks:</strong>
+          {{ stats.upgrade_checkout_clicks | default(0) }}
         </li>
       </ul>
     </div>
+
 
 
     <!-- Trades -->
